# understanding

./: .gitignore  ChangeLog.md  Polymorphism.hs  Singletons.hs  Types.hs  composition.lyx  understanding.cabal
